github-maven-plugins-test-master-pl-217: split to two jobs (Maven 2 / Maven 3) and "plugins-version" parameter added