@@ -211,19 +211,53 @@
                                 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
                                 <job>
-                                    <id>github-maven-plugins-test-master-pl-217</id>
+                                    <id>github-maven-plugins-test-master-pl-217-m2</id>
                                     <jobType>free</jobType>
                                     <scmType>git</scmType>
                                     <repository>
                                         <remote>${maven-plugins-test-repo}</remote>
                                         <gitBranch>master</gitBranch>
                                     </repository>
+                                    <parameters>
+                                        <parameter>
+                                            <type>string</type>
+                                            <name>plugins-version</name>
+                                            <value>0.2.1</value>
+                                            <description>Plugins version to test</description>
+                                        </parameter>
+                                    </parameters>
                                     <tasks>
                                         <maven>
                                             <mavenName>apache-maven-2.2.1</mavenName>
                                             <jvmOptions>-Xmx256m -XX:MaxPermSize=250m</jvmOptions>
                                             <targets>-e -B -U clean install</targets>
-                                            <properties>plugins-version = 0.2.1</properties>
+                                            <properties>plugins-version = {plugins-version}</properties>
+                                        </maven>
+                                    </tasks>
+                                </job>
+
+                                <job>
+                                    <id>github-maven-plugins-test-master-pl-217-m3</id>
+                                    <jobType>free</jobType>
+                                    <scmType>git</scmType>
+                                    <repository>
+                                        <remote>${maven-plugins-test-repo}</remote>
+                                        <gitBranch>master</gitBranch>
+                                    </repository>
+                                    <parameters>
+                                        <parameter>
+                                            <type>string</type>
+                                            <name>plugins-version</name>
+                                            <value>0.2.1</value>
+                                            <description>Plugins version to test</description>
+                                        </parameter>
+                                    </parameters>
+                                    <tasks>
+                                        <maven>
+                                            <mavenName>apache-maven-3</mavenName>
+                                            <jvmOptions>-Xmx256m -XX:MaxPermSize=250m</jvmOptions>
+                                            <targets>-e -B -U clean install</targets>
+                                            <properties>plugins-version = {plugins-version}</properties>
                                         </maven>
                                     </tasks>
                                 </job>
